Crash snapping mesh if a beveled curve is present #91734

Closed
opened 2021-09-26 22:17:29 +02:00 by Georg K · 17 comments

System Information
Operating system: Linux-5.14.7-2-MANJARO-x86_64-with-glibc2.33 64 Bits
Graphics card: AMD VERDE (DRM 2.50.0, 5.14.7-2-MANJARO, LLVM 12.0.1) AMD 4.5 (Core Profile) Mesa 21.2.2

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-24 14:42, hash: 4a2c63f4bd
Worked: 2.93

Apparently caused by 6a88f83d67

Short description of error
Blender will crash if you snap a mesh object in a scene that also includes a beveled curve object.
If you set the bevel depth of the curve to 0, the file will not crash. Trying to move and snap the curve does not cause a crash.
(In some earlier tests, it was necessary for the curve to have shapekeys, but the sample file crashes without. In some tests, changing the mesh geometry prevented the crash.)

Exact steps for others to reproduce the error
In the attached file, select the mesh object,

  • hit G to move and hold Ctrl to snap
  • try moving the mesh object (does not move)
  • Blender crashes

Crash snapping mesh if a beveled curve is present.blend

From scratch:

  • In the default scene, add a Bezier curve
  • change its bevel depth
  • select cube, press G then hold down Ctrl
  • Blender crashes

output:
Segmentation fault (core dumped)

backtrace:

 Blender 3.0.0, Commit date: 2021-09-24 14:42, Hash 4a2c63f4bd7e

# backtrace
../build_linux/bin/blender(BLI_system_backtrace+0x33) [0x7d81613]
../build_linux/bin/blender() [0xf4773b]
/usr/lib/libc.so.6(+0x3cda0) [0x7fcafe0abda0]
../build_linux/bin/blender(minmax_v3v3_v3+0) [0x7d37b70]
../build_linux/bin/blender(BKE_mesh_minmax+0x42) [0xfb8df2]
../build_linux/bin/blender(BKE_mesh_boundbox_get+0x97) [0xfb8127]
../build_linux/bin/blender() [0x1e2aa08]
../build_linux/bin/blender() [0x1e2afdc]
../build_linux/bin/blender() [0x1e2782e]
../build_linux/bin/blender() [0x1e2ba5d]
../build_linux/bin/blender(snapObjectsTransform+0xab) [0x1e2604b]
../build_linux/bin/blender() [0x1e262fa]
../build_linux/bin/blender(applySnapping+0xa9) [0x1e24fa9]
../build_linux/bin/blender() [0x1e1bcc3]
../build_linux/bin/blender(transformApply+0x71) [0x1de4de1]
../build_linux/bin/blender() [0x1e1e56b]
../build_linux/bin/blender() [0x133f38c]
../build_linux/bin/blender() [0x13407a7]
../build_linux/bin/blender() [0x1340ddc]
../build_linux/bin/blender(wm_event_do_handlers+0x248) [0x1341348]
../build_linux/bin/blender(WM_main+0x20) [0x13372a0]
../build_linux/bin/blender(main+0x336) [0xec0616]
/usr/lib/libc.so.6(__libc_start_main+0xd5) [0x7fcafe096b25]
../build_linux/bin/blender(_start+0x2e) [0xf43e0e]

# Python backtrace

**System Information** Operating system: Linux-5.14.7-2-MANJARO-x86_64-with-glibc2.33 64 Bits Graphics card: AMD VERDE (DRM 2.50.0, 5.14.7-2-MANJARO, LLVM 12.0.1) AMD 4.5 (Core Profile) Mesa 21.2.2 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-24 14:42, hash: `4a2c63f4bd` Worked: 2.93 Apparently caused by 6a88f83d67 **Short description of error** Blender will crash if you snap a mesh object in a scene that also includes a beveled curve object. If you set the bevel depth of the curve to 0, the file will not crash. Trying to move and snap the curve does not cause a crash. (In some earlier tests, it was necessary for the curve to have shapekeys, but the sample file crashes without. In some tests, changing the mesh geometry prevented the crash.) **Exact steps for others to reproduce the error** In the attached file, select the mesh object, - hit G to move and hold Ctrl to snap - try moving the mesh object (does not move) - Blender crashes [Crash snapping mesh if a beveled curve is present.blend](https://archive.blender.org/developer/F10617539/Crash_snapping_mesh_if_a_beveled_curve_is_present.blend) From scratch: - In the default scene, add a Bezier curve - change its bevel depth - select cube, press G then hold down Ctrl - Blender crashes output: Segmentation fault (core dumped) backtrace: ```lines Blender 3.0.0, Commit date: 2021-09-24 14:42, Hash 4a2c63f4bd7e # backtrace ../build_linux/bin/blender(BLI_system_backtrace+0x33) [0x7d81613] ../build_linux/bin/blender() [0xf4773b] /usr/lib/libc.so.6(+0x3cda0) [0x7fcafe0abda0] ../build_linux/bin/blender(minmax_v3v3_v3+0) [0x7d37b70] ../build_linux/bin/blender(BKE_mesh_minmax+0x42) [0xfb8df2] ../build_linux/bin/blender(BKE_mesh_boundbox_get+0x97) [0xfb8127] ../build_linux/bin/blender() [0x1e2aa08] ../build_linux/bin/blender() [0x1e2afdc] ../build_linux/bin/blender() [0x1e2782e] ../build_linux/bin/blender() [0x1e2ba5d] ../build_linux/bin/blender(snapObjectsTransform+0xab) [0x1e2604b] ../build_linux/bin/blender() [0x1e262fa] ../build_linux/bin/blender(applySnapping+0xa9) [0x1e24fa9] ../build_linux/bin/blender() [0x1e1bcc3] ../build_linux/bin/blender(transformApply+0x71) [0x1de4de1] ../build_linux/bin/blender() [0x1e1e56b] ../build_linux/bin/blender() [0x133f38c] ../build_linux/bin/blender() [0x13407a7] ../build_linux/bin/blender() [0x1340ddc] ../build_linux/bin/blender(wm_event_do_handlers+0x248) [0x1341348] ../build_linux/bin/blender(WM_main+0x20) [0x13372a0] ../build_linux/bin/blender(main+0x336) [0xec0616] /usr/lib/libc.so.6(__libc_start_main+0xd5) [0x7fcafe096b25] ../build_linux/bin/blender(_start+0x2e) [0xf43e0e] # Python backtrace ```
Author

Added subscriber: @georgK

Added subscriber: @georgK

#91717 was marked as duplicate of this issue

#91717 was marked as duplicate of this issue

Added subscriber: @Wovchick

Added subscriber: @Wovchick
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscribers: @Jeroen-Bakker, @lichtwerk

Added subscribers: @Jeroen-Bakker, @lichtwerk
Member

Apparently caused by 6a88f83d67

@Jeroen-Bakker : can you check this?

Apparently caused by 6a88f83d67 @Jeroen-Bakker : can you check this?
Member

Added subscribers: @s12a, @deadpin, @iss

Added subscribers: @s12a, @deadpin, @iss
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly

Added subscriber: @ChrisGraz

Added subscriber: @ChrisGraz

This issue was referenced by 6cff1d6480

This issue was referenced by 6cff1d648030f65bc299b1abd480c5a36504863d

Added subscriber: @Tilapiatsu

Added subscriber: @Tilapiatsu

Hi @georgK , @Jeroen-Bakker ,

I have the same issue but with a little twist. The file you have shared workd perfectly for me. But for me the crash is happening only when I try to use the snapping if I have a curve converted from a mesh visible in the scene.
Hiding it is works well, remove the depth works well and deleting it works well

Opening the falty scene on the build from the 10th of september (eab26f1334) works well, but it starts crashing after this build, from 12th of september (b5a1c194c5)

The crash also happening when snapping the 3D cursor

Crash_report_Curve_snap.mp4
CurveSnap_CLEAN.blend
CurveSnap_CORRUPTED.blend

Thanks,

I hope it will help to fix the bug :)

Hi @georgK , @Jeroen-Bakker , I have the same issue but with a little twist. The file you have shared workd perfectly for me. But for me the crash is happening only when I try to use the snapping if I have a curve **converted from a mesh** visible in the scene. Hiding it is works well, remove the depth works well and deleting it works well Opening the falty scene on the build from the 10th of september (eab26f1334) works well, but it starts crashing after this build, from 12th of september (b5a1c194c5) The crash also happening when snapping the 3D cursor [Crash_report_Curve_snap.mp4](https://archive.blender.org/developer/F10687221/Crash_report_Curve_snap.mp4) [CurveSnap_CLEAN.blend](https://archive.blender.org/developer/F10687232/CurveSnap_CLEAN.blend) [CurveSnap_CORRUPTED.blend](https://archive.blender.org/developer/F10687234/CurveSnap_CORRUPTED.blend) Thanks, I hope it will help to fix the bug :)

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Germano Cavalcante self-assigned this 2021-09-30 17:51:55 +02:00

Although the issue was introduced in 6a88f83d67, this only revealed an error in the snap code and one that is already being handled for example in D12282: Fix #90808: Undo curve selection recalculates boundbox based on curve data.
Fix on the way.

Although the issue was introduced in 6a88f83d67, this only revealed an error in the snap code and one that is already being handled for example in [D12282: Fix #90808: Undo curve selection recalculates boundbox based on curve data](https://archive.blender.org/developer/D12282). Fix on the way.

On further investigation, I'm not sure how 6a88f83d67 might have introduced the problem.
This problem has more to do with b9febb54a4, which forces the conversion of this type of curve to Mesh.

On further investigation, I'm not sure how 6a88f83d67 might have introduced the problem. This problem has more to do with b9febb54a4, which forces the conversion of this type of curve to Mesh.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91734
No description provided.