Fix T91734: Crash snapping mesh if a beveled curve is present

`BKE_mesh_boundbox_get` cannot be called for objects of type Curve.

The BoundBox however does not match the object seen in the scene.
This will be dealt with in another commit.